@@ -98,6 +98,7 @@ class OSFS(OSFSXAttrMixin, OSFSWatchMixin, FS):
 
         super(OSFS, self).__init__(thread_synchronize=thread_synchronize)
         self.encoding = encoding or sys.getfilesystemencoding()
+        self.dir_mode = dir_mode
         root_path = os.path.expanduser(os.path.expandvars(root_path))
         root_path = os.path.normpath(os.path.abspath(root_path))
         #  Enable long pathnames on win32
@@ -318,5 +319,24 @@ class OSFS(OSFSXAttrMixin, OSFSWatchMixin, FS):
     @convert_os_errors
     def getsize(self, path):
         return self._stat(path).st_size
+
+    @convert_os_errors
+    def opendir(self, path):
+        """A specialised opendir that returns another OSFS rather than a SubDir
+        
+        This is more optimal than a SubDir because no path delegation is required.
+        
+        """
+        if path in ('', '/'):
+            return self
+        path = normpath(path)
+        if not self.exists(path):
+            raise ResourceNotFoundError(path)
+        sub_path = pathjoin(self.root_path, path)
+        return OSFS(sub_path,
+                    thread_synchronize=self.thread_synchronize,
+                    encoding=self.encoding,
+                    create=False,
+                    dir_mode=self.dir_mode)
 
 
